# AskTrueFoundry-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: README.md  agent-builder-instructions.md
data/: README.md
scripts/: ingest.py  mcp_smoke.py
src/asktruefoundry/: __init__.py  cli.py  config.py  crawler.py  gateway.py  index.py  ingest.py  mcp_server.py  models.py  rag.py  text.py
tests/: test_mcp_server.py  test_phase1.py
